# xcf-to-tiff-to-webp

./: .gitignore  README.md  pyproject.toml
src/cli/: main.py
src/core/: config.py  converter.py
src/gui/: main_window.py
